Modified the tests to reflect current behaviour